Fix bug where message content could overlap attachments list in Larry skin (#1490479)

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -861,19 +861,14 @@ div.hide-headers {
 
 #messagecontent .rightcol,
 #messagepreview .rightcol {
-	float: right;
-/*
 	position: absolute;
-	top: 10px;
-	right: 10px;
-	height: 90%;
-*/
+	right: 8px;
 	width: 230px;
-	margin: 8px;
 	min-height: 200px;
 	background: #f0f0f0;
 	padding: 8px;
 	border-radius: 4px;
+	z-index: 1;
 }
 
 #messagebody {
